--- a/css/achievements.css
+++ b/css/achievements.css
@@ -23,11 +23,12 @@
 }
 
 .achievement img {
+  border-radius: 2px;
   width: 100%;
 }
 
 .achievement p {
-  padding: 8%;
+  padding: 4% 5%;
   margin: 0;
 }
 
