--- a/css/clicker.css
+++ b/css/clicker.css
@@ -1,10 +1,12 @@
 .clicking-wrap {
   background-color: #061826;
   color: #4dccbd;
+  padding-bottom: 10px;
 }
 
 .clicker-macaron {
-  height: 200px;
+  padding: 30px 0 10px 0;
+  height: 120px;
 }
 
 .clicker-macaron:hover {
